Fixed issue where the Tip Percent and Number of People inputs had rounded corners on Mobile Safari and Chrome.

--- a/style.css
+++ b/style.css
@@ -87,11 +87,20 @@ h1, h4, h2 {
     color: var(--themeColor);
     outline: none;
     -webkit-appearance: none;
+    -webkit-border-radius: none;
 }
 
 .billInputField {
     border: none;
     border-radius: 5px;
+}
+
+#tipPercent{
+    border-radius: 0;
+}
+
+#peopleTotal{
+    border-radius: 0;
 }
 
 .counterBtns {
